// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconPuzzlePiece should correctly render default icon with default color 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePiece"
  height={32}
  viewBox="0 0 14 14"
  width={32}
>
  <path
    d="M0 4.16v3c.17.85.65.93 1.15.8a1.72 1.72 0 0 1 1.31-.61 1.7 1.7 0 0 1 0 3.4 1.72 1.72 0 0 1-1.31-.61c-.5-.13-1-.05-1.15.8v3h9.84V11c.17-.85.64-.93 1.15-.8A1.7 1.7 0 1 0 11 8c-.51.13-1 0-1.15-.8v-3h-3C6 4 5.88 3.52 6 3a1.7 1.7 0 1 0-2.17 0c.13.51 0 1-.8 1.15z"
    fill="#a7a7a7"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePiece should correctly render icon with custom class name 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePiece rectangular"
  height={32}
  viewBox="0 0 14 14"
  width={32}
>
  <path
    d="M0 4.16v3c.17.85.65.93 1.15.8a1.72 1.72 0 0 1 1.31-.61 1.7 1.7 0 0 1 0 3.4 1.72 1.72 0 0 1-1.31-.61c-.5-.13-1-.05-1.15.8v3h9.84V11c.17-.85.64-.93 1.15-.8A1.7 1.7 0 1 0 11 8c-.51.13-1 0-1.15-.8v-3h-3C6 4 5.88 3.52 6 3a1.7 1.7 0 1 0-2.17 0c.13.51 0 1-.8 1.15z"
    fill="#a7a7a7"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePiece should correctly render icon with specified color 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePiece"
  height={32}
  viewBox="0 0 14 14"
  width={32}
>
  <path
    d="M0 4.16v3c.17.85.65.93 1.15.8a1.72 1.72 0 0 1 1.31-.61 1.7 1.7 0 0 1 0 3.4 1.72 1.72 0 0 1-1.31-.61c-.5-.13-1-.05-1.15.8v3h9.84V11c.17-.85.64-.93 1.15-.8A1.7 1.7 0 1 0 11 8c-.51.13-1 0-1.15-.8v-3h-3C6 4 5.88 3.52 6 3a1.7 1.7 0 1 0-2.17 0c.13.51 0 1-.8 1.15z"
    fill="#fcfcfc"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePiece should correctly render icon with specified width and height and default viewBox value 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePiece"
  height={16}
  viewBox="0 0 14 14"
  width={16}
>
  <path
    d="M0 4.16v3c.17.85.65.93 1.15.8a1.72 1.72 0 0 1 1.31-.61 1.7 1.7 0 0 1 0 3.4 1.72 1.72 0 0 1-1.31-.61c-.5-.13-1-.05-1.15.8v3h9.84V11c.17-.85.64-.93 1.15-.8A1.7 1.7 0 1 0 11 8c-.51.13-1 0-1.15-.8v-3h-3C6 4 5.88 3.52 6 3a1.7 1.7 0 1 0-2.17 0c.13.51 0 1-.8 1.15z"
    fill="#a7a7a7"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePiece should correctly render icon with title 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePiece"
  height={32}
  title="abcde"
  viewBox="0 0 14 14"
  width={32}
>
  <path
    d="M0 4.16v3c.17.85.65.93 1.15.8a1.72 1.72 0 0 1 1.31-.61 1.7 1.7 0 0 1 0 3.4 1.72 1.72 0 0 1-1.31-.61c-.5-.13-1-.05-1.15.8v3h9.84V11c.17-.85.64-.93 1.15-.8A1.7 1.7 0 1 0 11 8c-.51.13-1 0-1.15-.8v-3h-3C6 4 5.88 3.52 6 3a1.7 1.7 0 1 0-2.17 0c.13.51 0 1-.8 1.15z"
    fill="#a7a7a7"
  />
</AccessibleSVG>
`;
